--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -4,3 +4,9 @@ backgroundColor = "#F8FAFC" # Very light grey-blue (not harsh white)
 secondaryBackgroundColor = "#E2E8F0" # Sidebar grey
 textColor = "#1E293B"       # Dark slate text
 font = "sans serif"
+
+[server]
+headless = true
+
+[browser]
+gatherUsageStats = false
