enhanced ui/ux feature

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,9 +1,10 @@
 [theme]
-primaryColor = "#2563EB"    # Professional Blue
-backgroundColor = "#F8FAFC" # Very light grey-blue (not harsh white)
-secondaryBackgroundColor = "#E2E8F0" # Sidebar grey
-textColor = "#1E293B"       # Dark slate text
-font = "sans serif"
+# A deep, modern dark mode palette
+primaryColor = "#8B5CF6"          # Neon Purple for main highlights
+backgroundColor = "#111827"       # Very Dark Blue/Grey (Dashboard background)
+secondaryBackgroundColor = "#1F2937" # Slightly lighter grey for sidebar/inputs
+textColor = "#F3F4F6"             # Off-white text for readability
+font = "sans serif"               # Clean modern font
 
 [server]
 headless = true
